MH-2760: Capture Agent page can now start/stop captures, edit properties and displays CA state.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7148 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
+++ b/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
@@ -11,6 +11,10 @@
 	function stopCapture() {
 		document.location = "http://" + window.location.hostname + ":8080/capture/rest/stopCapture";
 	}
+	var getState = new XMLHttpRequest();
+	getState.open("GET", "http://" + window.location.hostname + ":8080/state/rest/GetState", false);
+	getState.send();
+	document.write("<p><code>Agent State: " + getState.responseText + "</code></p>");
 	
 	var start = "http://" + window.location.hostname + ":8080/capture/rest/startCapture"
 	var end = "<a href='http://" + window.location.hostname + ":8080/capture/rest/stopCapture'>Stop Capture</a>";
