MH-3750, Updates to confidence monitoring.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7152 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -40,7 +40,7 @@
           <div id="image_preview"></div>
           <div id="audio_preview">
             <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></img></div>
-            <div id="right_channel" class="audio_meter"><img id="right_mask" class="meter_mask" src="img/mask.png"></img></div>
+            <div id="right_channel" class="audio_meter" style="display: none;"><img id="right_mask" class="meter_mask" src="img/mask.png"></img></div>
           </div>
         </div>
       </div>
