--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -37,7 +37,7 @@
           <ul id="device_tab"></ul>
         </div>
         <div>
-          <div id="image_preview"></div>
+          <div id="image_preview"><img src="img/plug.png" id="snapshot"></img></div>
           <div id="audio_preview">
             <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></img></div>
             <div id="right_channel" class="audio_meter" style="display: none;"><img id="right_mask" class="meter_mask" src="img/mask.png"></img></div>
