MH-3859 updating selenium tests
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7169 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/uitests/TestSuite.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/uitests/TestSuite.html
@@ -21,6 +21,7 @@
 <tr><td><a href="./ToggleNotes.html">ToggleNotes.html</a></td></tr>
 <tr><td><a href="./ToggleShortcuts.html">ToggleShortcuts.html</a></td></tr>
 <tr><td><a href="./ToggleSlides.html">ToggleSlides.html</a></td></tr>
+<tr><td><a href="./ToggleBookmarks.html">ToggleBookmarks.html</a></td></tr>
 
 <tr><td><a href="./FlashPlayPause.html">FlashPlayPause.html</a></td></tr>
 <tr><td><a href="./FlashMute.html">FlashMute.html</a></td></tr>
