--- a/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleBookmarks.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleBookmarks.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>ToggleShortcuts</title>
+<title>ToggleEmbed</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">ToggleShortcuts</td></tr>
+<tr><td rowspan="1" colspan="3">ToggleEmbed</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -43,45 +43,59 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_shortcuts</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>oc_btn-shortcuts</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>oc_btn-shortcuts</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyVisible</td>
-	<td>oc_shortcuts</td>
+	<td>oc_bookmarks</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyValue</td>
-	<td>oc_btn-shortcuts</td>
-	<td>Hide Shortcuts</td>
+	<td>oc_btn-bookmarks</td>
+	<td>Bookmarks</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>oc_btn-shortcuts</td>
+	<td>oc_btn-bookmarks</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyNotVisible</td>
-	<td>oc_shortcuts</td>
+	<td>verifyVisible</td>
+	<td>oc_bookmarks</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>oc_addBookmark</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>oc_addBookmark</td>
+	<td>This is a bookmark</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>oc_btn-addBookmark</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>oc_btn-shortcuts</td>
+	<td>//option[@value='00:00:00']</td>
+	<td>exact:00:00:00 Stefan Altevogt: This is a bookmark</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-bookmarks</td>
+	<td>Hide Bookmarks</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>oc_btn-bookmarks</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>verifyNotVisible</td>
+	<td>oc_bookmarks</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
