--- a/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleEmbed.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleEmbed.html
@@ -43,8 +43,13 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_embed-sections</td>
+	<td>oc_embed</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-embed</td>
+	<td>Embed</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -53,8 +58,43 @@
 </tr>
 <tr>
 	<td>verifyVisible</td>
-	<td>oc_embed-sections</td>
+	<td>oc_embed</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_embed-720x545</td>
+	<td>720x545</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_embed-640x500</td>
+	<td>640x500</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_embed-560x455</td>
+	<td>560x455</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_embed-480x410</td>
+	<td>480x410</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>oc_embed-720x545</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>oc_embed-textarea</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-embed</td>
+	<td>Hide Embed</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -63,10 +103,16 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_embed-sections</td>
+	<td>oc_embed</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-embed</td>
+	<td>Embed</td>
 </tr>
 
 </tbody></table>
 </body>
 </html>
+
