--- a/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleNotes.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleNotes.html
@@ -43,8 +43,13 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_notes-sections</td>
+	<td>oc_notes</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-notes</td>
+	<td>Notes</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -53,8 +58,13 @@
 </tr>
 <tr>
 	<td>verifyVisible</td>
-	<td>oc_notes-sections</td>
+	<td>oc_notes</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-notes</td>
+	<td>Hide Notes</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -63,10 +73,16 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_notes-sections</td>
+	<td>oc_notes</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-notes</td>
+	<td>Notes</td>
 </tr>
 
 </tbody></table>
 </body>
 </html>
+
