--- a/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleSlides.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/uitests/ToggleSlides.html
@@ -43,8 +43,13 @@
 </tr>
 <tr>
 	<td>verifyVisible</td>
-	<td>oc_slides-sections</td>
+	<td>oc_slides</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>oc_btn-slides</td>
+	<td>Hide Slides</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -53,18 +58,13 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>oc_slides-sections</td>
+	<td>oc_slides</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>verifyValue</td>
 	<td>oc_btn-slides</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyVisible</td>
-	<td>oc_slides-sections</td>
-	<td></td>
+	<td>Slides</td>
 </tr>
 
 </tbody></table>
