MH-3750, UI tweaks, audio monitor image
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7184 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/confidence.css">
     <!-- scripts -->
     <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>-->
     <script type="text/javascript" src="js/confidence.js"></script>
   </head>
   <body>
@@ -24,10 +25,7 @@
       <div id="content_area">      
         <div id="video_preview">
           <div>
-            <ul id="video_devices" class="device_tab">
-              <li class="tab">Video</li>
-              <li class="tab selected" style="border-right: 1px solid black">Audio</li>
-            </ul>
+            <ul id="video_devices" class="device_tab"></ul>
           </div>
           <div id="preview_area">
             <img height="480" width="720" src="img/plug.png" id="snapshot"></img>
@@ -35,10 +33,7 @@
         </div>
         <div id="audio_preview">
           <div>
-            <ul id="audio_devices" class="device_tab">
-              <li class="tab">Audio 1</li>
-              <li class="tab selected">Audio 2</li>
-            </ul>
+            <ul id="audio_devices" class="device_tab"></ul>
           </div>
           <div id="preview_area">
               <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></img></div>
