--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
     <!--<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>-->
     <script type="text/javascript" src="js/confidence.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){ Monitor.loadDevices(); });
+    </script>
   </head>
   <body>
     <div id="pageHeader">
