MH-3770, Cookbook link change.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7203 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-runtime-info-ui/src/main/resources/ui/welcome.html
+++ b/modules/matterhorn-runtime-info-ui/src/main/resources/ui/welcome.html
@@ -111,7 +111,7 @@
                 </ul>
               </li>
               <li><a href="http://opencast.jira.com/wiki/display/MH/Take+a+Look+Under+the+Hood">System Overview</a></li>
-              <li><a href="http://opencast.jira.com/wiki/display/MH/Release+0.5+Cookbook">Cookbooks</a></li>
+              <li><a href="http://opencast.jira.com/wiki/display/MH/Cookbook">Cookbooks</a></li>
             </ul>
           </div>
           <div id="community">
