--- a/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
+++ b/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <meta http-equiv="cache-control", content="no-cache">
     <title id="window-title">Opencast Matterhorn - Capture Agent Diagnostics</title>
     <!-- scripts -->
     <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
@@ -13,11 +14,17 @@ function refreshState(url, target) {
   req.onreadystatechange = function() {getResponse(target);};
   req.open("GET", url, true);
   req.send();
-  setTimeout("refreshState(page)", 10000);
+  setTimeout("refreshState(stateURL, 'state')", 5000);
 }
-function getResponse(target)
+function getResponse(target) {
+  if (req.status == 200) {
+    document.getElementById(target).innerHTML = req.responseText;
+  } else {
+    document.getElementById(target).innerHTML = req.status;
+  }
+}
 </script>
-<body onload="refreshState>
+<body onload="refreshState(stateURL, 'state')">
   
   <p><code>Agent State: <span id="state"></span></code></p>
   
@@ -28,10 +35,6 @@ function getResponse(target)
 	function stopCapture() {
 		document.location = "http://" + window.location.hostname + ":8080/capture/rest/stopCapture";
 	}
-	var getState = new XMLHttpRequest();
-	getState.open("GET", "http://" + window.location.hostname + ":8080/state/rest/GetState", false);
-	getState.send();
-	document.write("<p><code>Agent State: " + getState.responseText + "</code></p>");
 	
 	var start = "http://" + window.location.hostname + ":8080/capture/rest/startCapture"
 	var end = "<a href='http://" + window.location.hostname + ":8080/capture/rest/stopCapture'>Stop Capture</a>";
