--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -51,7 +51,7 @@
 		</div>
 		<div id="oc_search">    
 			<form action="index.html">
-				<input id="oc_searchField" class="oc_search-Field" type="text" name="q" value="search Matterhorn" />
+				<input id="oc_searchField" class="oc_search-Field" type="text" name="q" value="Search Matterhorn" />
 				<input id="oc_btn-search" type="submit" name="search" alt="search" title="search" value="Search"></input>
 			</form>
 		</div>
@@ -224,7 +224,7 @@
         <input id="oc_btn-transcript" class="oc_btn-tabs" type="submit" onClick="Opencast.Player.doToggleTranscript()" name="Transcript" value="Transcript" alt="Transcript" title="Transcript"></input>
         
         <div id="oc_tabs-search">
-          <input id="oc_lecturer-search-field" class="oc_search-Field" type="text" value="search this lecture"></input>
+          <input id="oc_lecturer-search-field" class="oc_search-Field" type="text" value="Search this Recording"></input>
         </div>
         
         <div class="clear"></div>
