--- a/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
@@ -37,6 +37,7 @@
     <!-- scripts -->
     <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/upload.helptexts.json"></script>
+    <script type="text/javascript" src="js/oc.workflow.js"></script>
     <script type="text/javascript" src="js/upload.js"></script>
     <script type="text/javascript" src="js/uploadListener.js"></script>
     <script type="text/javascript" src="js/oc.utils.js"></script>
