NOJIRA: State REST endpoint changed, updating Capture Agent Diagnostics.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7291 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
+++ b/modules/matterhorn-capture-agent-impl/src/main/resources/ui/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="js/state.js"></script>
 </head>
 <script type="text/javascript" language="javascript">
-var stateURL = "http://" + window.location.hostname + ":8080/state/rest/GetState";
+var stateURL = "http://" + window.location.hostname + ":8080/state/rest/state";
 function refreshState(url, target) {
   req = new XMLHttpRequest();
   req.onreadystatechange = function() {getResponse(target);};
