MH-3722: previously selected flavor is now selected when going to edit & retry
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7320 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
@@ -196,12 +196,12 @@
                     <input type="radio" name="use-file" class="use-file" value="replace-file" id="use-file-replace">Upload replacement file
                   </div>
                 </li>
-                <!-- li class="ui-helper-clearfix" id="regular-file-selection">
+                <li class="ui-helper-clearfix" id="regular-file-selection">
                   <label class="fl-label"><span id="i18n_file_location">File Location</span>:</label>
                   <input type="radio" name="file-location" class="file-location" value="local" checked="true">Local hard drive
                   &nbsp;&nbsp;
-                  <<input type="radio" name="file-location" class="file-location" value="inbox">Designated inbox on server
-                </li-->
+                  <input type="radio" name="file-location" class="file-location" value="inbox">Designated inbox on server
+                </li>
                 <!-- field: Media File -->
                 <li class="ui-helper-clearfix" id="regular-file-chooser">
                   <label class="fl-label"><span class="color-red">* </span><span id="i18n_upload_file">Media File</span>:</label>
