MH-4063, MH-4057, MH-3998
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7344 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid.js"></script> 
     <script type="text/javascript" src="engage-hybrid-player/aria/js/ariaSlider.js"></script>     
     <script type="text/javascript" src="jquery/plugins/jwysiwyg/jquery.wysiwyg.js"></script>
+    <script type="text/javascript" src="jquery/plugins/jquery.client.js"></script>
     <script type="text/javascript" src="js/engage-ui.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid-initialize.js"></script>
     <script type="text/javascript" src="shared_js/version.js"></script>  
@@ -206,27 +207,9 @@
 	<span id="skip">
 		<a name="shortcuts"></a>
 	</span>
-	  <h4>OS specific shortcuts</h4>
-          Press Control + Alt + I    = Toggle the keyboard shortcuts information between show or hide.<br>
-          Press Control + Alt + P    = Toggle the video between pause or play.<br>
-          Press Control + Alt + S    = Stop the video.<br>
-          Press Control + Alt + M    = Toggle between mute or unmute the video.<br>
-          Press Control + Alt + U    = Volume up<br>
-          Press Control + Alt + D    = Volume down<br>
-          Press Control + Alt 0 - 9  = Seek the time slider<br>
-          Press Control + Alt + C   = Toggle between captions on or off.<br>
-          Press Control + Alt + F    = Forward the video.<br>
-          Press Control + Alt + R    = Rewind the video.<br>
-          Press Control + Alt + T    = the current time for the screen reader<br>
-          Press on Mac cmd +         = to zoom in the player<br>
-          Press on Mac cmd -         = to minimize the player<br>
-          Press on Windows Control + = to zoom in the player<br>
-          Press on Windows Control - = to minimize the player<br>
-	  <h4>Screen reader specific shortcuts</h4>
-	  For JAWS:        press ... <br/>
-	  For NVDA:        press ... <br/>
-	  For ORCA:        press ... <br/>
-	  For Window-Eyes: press ... <br/>
+	  <h4>Player-Shortcuts</h4>
+	  <div id="oc_client_shortcuts">
+	  </div>
         </div>
         
       </div>
