MH-4084, NS parse change, removed superfluous image tags.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7368 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -31,7 +31,7 @@
             <ul id="video_devices" class="device_tab"></ul>
           </div>
           <div id="preview_area">
-            <img height="480" width="720" src="img/plug.png" id="snapshot"></img>
+            <img height="480" width="720" src="img/plug.png" id="snapshot">
           </div>
         </div>
         <div id="audio_preview">
@@ -39,7 +39,7 @@
             <ul id="audio_devices" class="device_tab"></ul>
           </div>
           <div id="preview_area">
-              <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></img></div>
+              <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></div>
               <!-- <div id="right_channel" class="audio_meter" style="display: none;"><img id="right_mask" class="meter_mask" src="img/mask.png"></img></div> -->
           </div>
         </div>
