--- a/modules/matterhorn-admin-ui/src/main/resources/ui/agents_status.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/agents_status.html
@@ -67,6 +67,7 @@
         </a>
       </div><ul class="fl-tabs fl-tabs-left">
         <li class=""><a href="recordings.html">Recordings</a></li>
+        <li><a href="series.html" id="i18n_tab_series">Series</a></li>
         <li class="fl-activeTab"><a href='agents_status.html'>Capture Agents</a></li>
       </ul>
       <div id="stage" class="fl-tab-content wu-tab-content fl-fix">
