--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -138,9 +138,10 @@
                     <input type="text" class="form-field" name="title" id="title">
                     <span class="fl-icon icon-help" id="help_title" title="Click for help"></span>
                   </li>
-                  <li id="series_container">
-                    <label class="fl-label" for="series"  id="label-series"><span id="i18n_series_label"></span>:</label>
-                    <input type="text" class="form-field" name="series" id="series">
+                  <li id="series_container" class="ui-widget">
+                    <label class="fl-label" for="series_select"  id="label-series"><span id="i18n_series_label"></span>:</label>
+                    <input type="text" class="form-field ui-autocomplete-input" name="series_select" id="series_select">
+                    <input type="hidden" id="series">
                     <span class="fl-icon icon-help"  id="help_series" title="Click for help"></span>
                   </li>
                   <li>
