MH-3441, Added db number to audio levels. json parsing.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7420 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -39,7 +39,10 @@
             <ul id="audio_devices" class="device_tab"></ul>
           </div>
           <div id="preview_area">
-              <div id="left_channel" class="audio_meter"><img id="left_mask" class="meter_mask" src="img/mask.png"></div>
+              <div id="left_channel" class="audio_meter">
+                <div style="height: 100%;"><span id="dbValue" style="position: relative; top: 450px"></span></div>
+                <img id="left_mask" class="meter_mask" src="img/mask.png">
+              </div>
               <!-- <div id="right_channel" class="audio_meter" style="display: none;"><img id="right_mask" class="meter_mask" src="img/mask.png"></img></div> -->
           </div>
         </div>
