MH-2708, MH-4114: inbox ingest, time format (aklassen)
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7431 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -82,7 +82,7 @@
               <b>Missing or invalid input</b>
             </div>
             <div class="fl-widget-content warnbox-content">
-              <ul>
+              <ul id="warnbox-ul">
                 <li id="missing-title" class="missing-fields-item single-error multiple-error">
                   <span class="fl-icon inline-icon icon-bullet"></span>Please enter a <a href="javascript:$('#title')[0].focus();">title</a> for the recording.
                 </li>
