--- a/modules/matterhorn-admin-ui/src/main/resources/ui/viewevent.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/viewevent.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <link rel="shortcut icon" href="shared_img/favicon.ico"> 
-    <title>Opencast Matterhorn - View Recording</title>
+    <title>Opencast Matterhorn - View Recording Info</title>
     
     <!-- style -->
     <link rel="stylesheet" type="text/css" href="infusion-1.1.2/fss/css/fss-reset.css">
