MH-4131 and bugfixes
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7467 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="shared_js/version.js"></script>  
 
     <script type="text/javascript" src="js/segments.js"></script>
+    <script type="text/javascript" src="js/bookmarks.js"></script>
     <script type="text/javascript" src="js/watch.js"></script>
   </head>
 
@@ -157,21 +158,9 @@
 
           <div>
             <select id="oc_bookmarkSelect" size="5">
-              <option value="00:01:00" title="00:01:20 Alica Valls: Funny joke..." class="oc_option-publicBookmark">00:01:20 Alica Valls: This might be important for the finals...</option>
-              <option value="00:02:43" title="00:02:43 Markus Ketterl: Thats good!" class="oc_option-publicBookmark">00:02:43 Markus Ketterl: I hope that this will be explained in more detail</option>
             </select>
           </div>
-
         </div>
-
-        <div id="oc_bookmarks-container-right">
-          <input id="oc_myBookmarks-checkbox" type="checkbox" checked="true" alt="My Bookmarks"></input>
-          <input class="oc_bookmarks-myBookmark-label" type="text" value="My Bookmarks" disabled></input>
-          <br>
-          <input id="oc_publicBookmarks-checkbox" type="checkbox" checked="true" alt="Public Bookmarks"></input>
-          <input class="oc_bookmarks-publicBookmark-label" type="text" value="Public Bookmarks" disabled></input>
-        </div>
-
       </div>
 
       <div id="oc_embed" class="oc_DisplayNone fl-fix">
