--- a/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
@@ -47,7 +47,7 @@
   <div id="oc_body">
     <div id="oc_embed-title-bar">
       <div id="oc_embed-title">
-        <a href="#" target="_blank" title="View Advanced Player">Matterhorn - View Advanced Player</a>
+        <a id="oc-link-advanced-player" href="#" target="_blank" title="View Advanced Player" style="display: none;">Matterhorn - View Advanced Player</a>
       </div>
     </div>  
     
