MH-4131: review ui now using embed.html as player
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7491 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/review/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/review/index.html
@@ -54,7 +54,7 @@
               var videoUrl = $(previewTag).parent().parent().find('url').text();
               //alert("videoUrl: " + videoUrl);
               $('#video-url-container').attr('href',videoUrl).text(videoUrl);
-              var url = '../../../engage/ui/preview.html?videoUrl=' + videoUrl;
+              var url = '../../../engage/ui/embed.html?videoUrl=' + videoUrl;
               $('#player-container').attr('src', url);
             } else {
               $('#player-container').text('No preview encoded track found in MediaPackage');
