--- a/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
@@ -73,6 +73,12 @@
               $(this).html("n.a.");
             }
           });
+          $('.thumb').each( function() {
+            var src = $(this).attr("src");
+            if(src === undefined){
+              $(this).attr("src", "img/thumbnail.png");
+            }
+          });
         });
 
         if(searchQuery != null && searchQuery != ""){
